[package]
name = "nrf-ble-jammer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "BLE jammer for testing effects of radio interference"
keywords = ["embedded", "nordic", "nrf"]
categories = ["radio", "no-std"]
repository = "https://github.com/lulf/nrf-ble-jammer"

[dependencies]
embassy-executor = { version = "0.5.0", features = ["nightly", "arch-cortex-m", "executor-thread"] }
embassy-nrf = { version = "0.1.0", features = ["rt", "nrf52840", "time-driver-rtc1", "unstable-pac", "time", "gpiote", "defmt"] }
defmt-rtt = "0.4.1"
panic-probe = "0.3.2"
defmt = "0.3.8"
cortex-m-rt = "0.7.3"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
embassy-futures = "0.1.1"

[profile.release]
debug = 2

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
